# aula_pandas

./: README.md  pyproject.toml
src/pandas/: main.ipynb
src/pandas/dataset/: clientes.csv  vendas.csv  vendedores.csv
