[project]
name = "pandas"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro-Maia-250",email = "pedrodrm250@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "pandas", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
